# php-mincrypt

./: AUTHORS  README  autobuild.sh  configure.ac  php-mincrypt.spec
src/: Makefile.am  php-mincrypt.c  php-mincrypt.h
tests/: runtests.sh
